2009-11-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c:
	    Sometimes ran memchr() with bad length. Caused rare crash.

	* digipeater.c, aprxpolls.c, netax25.c, aprsis.c, aprx.c, aprx.h:
	    Valgrind tested minor changes.

2009-11-17  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in:
	    Big rewrite.

	* aprx.h, interface.c, digipeater.c, netax25.c:
	    Digipeater "relay-type directonly"  mode.
	    Interface parsing error detection improvement.

2009-11-08  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION 1.96

	* beacon.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in:
	    Rewrote beacon transmission interval codes, and documents
	    of the beacon system.

	* configure.in, Makefile.in:
	    Added  --with-pthread   option,  rewrote the  --with-embedded
	    option processing.

	* aprsis.c, configure.in:
	    Optionally support pthreads(3) where available, this can be
	    important for uCLinux and perhaps Windows, where fork(2) is
	    not available.

2009-11-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c:
	    Software tocall identity: APRX1C

	* cellmalloc.c:
	    Drop semaphores.  Not used in this codebase.

	* filter.c, aprx.h, parse_aprs.c, Makefile.in:
	    Port Aprsc's filter code to Aprx.

	* debian/aprx.init, rpm/aprx.init:
	    Update Debian's version, sync the rpm's version

	* telemetry.c:
	    Report every 20 minutes, but scale values telling 10 minute
	    traffic.  Start sending telemetry PARM blocks from system
	    start.

	* aprx.c:
	    Init configurations before starting erlang accounting subsystem.

2009-11-02  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION 1.95

	* aprx.c:
	    Software tocall identity: APRX1B

	* telemetry.c:
	    Erlang reporting confusion fixed.

2009-10-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    More logging of interface setups.

	* beacon.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in